--- a/src/main/resources/templates/admin/users/account-manage.html
+++ b/src/main/resources/templates/admin/users/account-manage.html
@@ -27,7 +27,7 @@
                         <div th:if="${success}">
                             <div class="manage-message-user-manage-page" th:text="${success}"></div>
                         </div>
-                        <h1 class="page-title__header">Moje konto</h1></div>
+                        <h1 class="page-title__header">My account</h1></div>
                     <div class="page-info-container">
                         <div id="avatar-section" class="overview-widget user-section nls_protected">
                             <div class="overview-widget__column overview-widget__name">
