--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -197,7 +197,7 @@
                                          th:id="'series-' + ${promoItem.imdbId}"
                                          th:data-product-id="${promoItem.imdbId}">
                                         <div class="Item-module-promobox-53fes Item-module-show-qrDtq">
-                                            <div class="Item-module-image-CGday" th:style="'background-image: url(' + ${promoItem.imageUrl} + ');'"></div>
+                                            <div class="Item-module-image-CGday" th:style="'background-image: url(' + ${promoItem.backgroundImageUrl} + ');'"></div>
                                             <a class="Item-module-link-Lms-C"
                                                tabindex="-1"
                                                th:with="formattedTitle=${promoItem.title.replace(' ', '-')+'/sezon-1'}"
